[gd_scene load_steps=7 format=3 uid="uid://dtr0fngxikvrt"]

[ext_resource type="Texture2D" uid="uid://cii37ffppbca" path="res://Art/32x32_white_square.png" id="1_jf8mf"]
[ext_resource type="Script" path="res://equipment_icon.gd" id="2_7mxbs"]

[sub_resource type="Animation" id="Animation_wkcdt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4rcc0"]
resource_name = "hit_portrait_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.419608), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qalq6"]
resource_name = "reload_finished_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4vrfe"]
_data = {
"RESET": SubResource("Animation_wkcdt"),
"hit_portrait_animation": SubResource("Animation_4rcc0"),
"reload_finished_animation": SubResource("Animation_qalq6")
}

[node name="EquipmentIcon" type="TextureRect"]
self_modulate = Color(0, 0.362987, 0.364418, 1)
custom_minimum_size = Vector2(40, 15)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jf8mf")
expand_mode = 1
script = ExtResource("2_7mxbs")

[node name="CooldownShadow" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.635294)

[node name="ReadyTint" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReadyTint"]
libraries = {
"": SubResource("AnimationLibrary_4vrfe")
}
speed_scale = 3.0

[node name="WeaponNameLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 6
text = "Name Here"
